--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -49,8 +49,96 @@
                </div>
             </div>
         </div>
-        <div class="main-content">Main Content</div>
-        <div class="music-player">Music player</div>
+        <div class="main-content">
+            <div class="sticky-nav">
+                <div class="sticky-div-nav">
+                <img src="assets\backward_icon.png"/>
+                <img src="assets\forward_icon.png" class="hide"/>
+                </div>
+                <div class="nav-div-nav">
+                <button class="badge nav-item hide">Explore premium</button>
+                <button class="badge nav-item dark-badge"><i class="fa-solid fa-circle-down" style="margin-right:5px;" id="arrow"></i>Install App </button>
+                <i class="fa-regular fa-user"></i>
+                </div>
+            </div>
+
+                <h2>Recently Played</h2>
+                <div class="cards-container">
+                    <div class="card">
+                        <img src="assets\card1img.jpeg" class="card-img"/>
+                        <p class="card-title">Top 50-Global</p>
+                        <p class="card-info">Your daily updates of the most played tracks</p>
+                    </div>
+               </div>
+               <h2>Trending near you</h2>
+                    <div class="cards-container">
+                    <div class="card">
+                        <img src="assets\card2img.jpeg" class="card-img"/>
+                        <p class="card-title">Top 50-Global</p>
+                        <p class="card-info">Your daily updates of the most played tracks</p>
+                    </div>
+    
+                    <div class="card">
+                        <img src="assets\card3img.jpeg" class="card-img"/>
+                        <p class="card-title">Top 50-Global</p>
+                        <p class="card-info">Your daily updates of the most played tracks</p>
+                    </div>
+
+                    <div class="card">
+                        <img src="assets\card4img.jpeg" class="card-img"/>
+                        <p class="card-title">Top 50-Global</p>
+                        <p class="card-info">Your daily updates of the most played tracks</p>
+                    </div>
+                     </div>
+                     <br> 
+
+                     <br>
+                    <h2>Featured near you</h2>
+                    <div class="cards-container">
+                    <div class="card">
+                        <img src="assets\card5img.jpeg" class="card-img"/>
+                        <p class="card-title">Top 50-Global</p>
+                        <p class="card-info">Your daily updates of the most played tracks</p>
+                    </div>
+
+                    <div class="card">
+                        <img src="assets\card6img.jpeg" class="card-img"/>
+                        <p class="card-title">Top songs-India</p>
+                        <p class="card-info">Your daily updates of the most played tracks</p>
+                    </div>
+                    
+                    <div class="card">
+                        <img src="assets\card1img.jpeg" class="card-img"/>
+                        <p class="card-title">Top songs-daily</p>
+                        <p class="card-info">Your daily updates of the most played tracks</p>
+                    </div>     
+                 </div>
+                 <br>
+
+                 <div class="footer">
+                    <div class="line">
+                    </div>
+                 </div>
+
+            </div>
+        <div class="music-player">
+            <div class="album"></div>
+            <div class="player">
+                <div class="player-controls">
+                    <img src="assets\player_icon1.png" class="player-control-icon">
+                    <img src="assets\player_icon2.png" class="player-control-icon">
+                    <img src="assets\player_icon3.png" class="player-control-icon" style="opacity:1;height:2rem";>
+                    <img src="assets\player_icon4.png" class="player-control-icon">
+                    <img src="assets\player_icon5.png" class="player-control-icon">
+                </div>
+                <div class="playback-bar">
+                    <span class="current-time">00.00</span>
+                    <input type="range" min="0" max="100" class="progress-bar" step="1">
+                    <span class="total-time">3.33</span>
+                </div>
+            </div>
+            <div class="controls"></div>
+        </div>
     </div>
 </body>
 </html>
