--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -122,7 +122,17 @@
 
             </div>
         <div class="music-player">
-            <div class="album"></div>
+            <div class="album">
+                <img src="assets\David_Kushner-_Daylight.png" class="play-song">
+            <div class="sname">
+                <p class="song">Daylight</p>
+                <p class="ssong">David Kushner</p>
+            </div>
+            <div class="sticker">
+                <i class="fa-regular fa-heart" id="heart"></i>
+                <i class="fa-solid fa-download"></i>
+            </div>
+            </div>
             <div class="player">
                 <div class="player-controls">
                     <img src="assets\player_icon1.png" class="player-control-icon">
